# training

./: .gitignore  README.md
docs/: README.md  _config.yml  index.md
docs/_posts/: 2014-11-07-goals-for-better-programming-sean-parent-cpp-seasoning.md  2015-02-02-c++11-is-still-c++-just-a-tinybit-easier.md  2015-02-10-understanding-lambda-make-your-own-lambda-with-c++03.md  2015-06-26-understanding-adl-argument-dependent-lookup-with-logging.md  2015-08-21-std-unique_ptr-primer-explicit-ownership-at-interface.md  2017-01-31-tips-for-writing-maintainable-tests.md  2017-06-20-cpp11-struct-and-class-part-1-non-resource.md  2017-06-27-cpp11-struct-and-class-part-2-resource.md  2018-05-01-temporary-lifetime-extension-C++11.md
docs/_posts/samples/: .clang-format
docs/_posts/samples/AdlDemo/: CMakeLists.txt  adldemo.cpp
docs/_posts/samples/Cpp11ResourceStructClass/: CMakeLists.txt  non_resource.cpp  resource_movable.cpp  resource_non_movable.cpp  resource_regular.cpp  resource_semi_regular.cpp
docs/_posts/samples/ExplicitMemoryManagmentAtInterfaceWithUniquePtrDemo/: CMakeLists.txt  interfacewithuniqueptrdemo.cpp
docs/_posts/samples/LambdaDemo/: CMakeLists.txt  lambdademo.cpp
docs/_posts/samples/LifeTime/: CMakeLists.txt  launch.vs.json  test.cpp  test.withoutanswers.cpp
